--- a/feladat.html
+++ b/feladat.html
@@ -934,3 +934,4 @@ USA_SpringTree, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9yzse4b
 USA_HeavySmokeBBQ, <b>updated</b>, 96, <a href="https://www.munzee.com/map/9yzsdz07k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HeavySmokeBBQ.json" target="_blank">json</a> <b>100%</b><br />
 USA_BowleroLaserTag, <b>updated</b>, 127, <a href="https://www.munzee.com/map/9yzs8z8k3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BowleroLaserTag.json" target="_blank">json</a> <b>100%</b><br />
 USA_BohrerPark, <b>updated</b>, 79, <a href="https://www.munzee.com/map/9yzepurxg/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BohrerPark.json" target="_blank">json</a> <b>100%</b><br />
+USA_Snowflake, <b>updated</b>, 44, <a href="https://www.munzee.com/map/9yzsdf8e1/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Snowflake.json" target="_blank">json</a> <b>100%</b><br />
