--- a/feladat.html
+++ b/feladat.html
@@ -951,3 +951,4 @@ USA_JimmyBeagle, <b>updated</b>, 74, <a href="https://www.munzee.com/map/9yzs9xw
 USA_PirateAxe, <b>updated</b>, 80, <a href="https://www.munzee.com/map/9yzssnpud/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PirateAxe.json" target="_blank">json</a> <b>100%</b><br />
 USA_ShamrocksMug, <b>updated</b>, 77, <a href="https://www.munzee.com/map/9yzs9t776/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ShamrocksMug.json" target="_blank">json</a> <b>100%</b><br />
 USA_Halloween, <b>updated</b>, 120, <a href="https://www.munzee.com/map/9yzsg8k4g/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Halloween.json" target="_blank">json</a> <b>100%</b><br />
+USA_AutumnMoon, <b>updated</b>, 144, <a href="https://www.munzee.com/map/9yzserg07/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AutumnMoon.json" target="_blank">json</a> <b>100%</b><br />
