--- a/feladat.html
+++ b/feladat.html
@@ -955,3 +955,4 @@ USA_AutumnMoon, <b>updated</b>, 144, <a href="https://www.munzee.com/map/9yzserg
 USA_Rosesquirrel, <b>updated</b>, 73, <a href="https://www.munzee.com/map/9yzse7m02/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Rosesquirrel.json" target="_blank">json</a> <b>100%</b><br />
 USA_Campfire, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yzsg564x/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Campfire.json" target="_blank">json</a> <b>100%</b><br />
 USA_GiftOfLife, <b>updated</b>, 80, <a href="https://www.munzee.com/map/9yzseje93/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GiftOfLife.json" target="_blank">json</a> <b>100%</b><br />
+USA_PirateLongsword, <b>updated</b>, 113, <a href="https://www.munzee.com/map/9yzsu2d5k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PirateLongsword.json" target="_blank">json</a> <b>100%</b><br />
