--- a/feladat.html
+++ b/feladat.html
@@ -962,3 +962,4 @@ USA_StLouisFlamingo, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9yz
 USA_PirateCrossbow, <b>updated</b>, 94, <a href="https://www.munzee.com/map/9yzsu639f/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PirateCrossbow.json" target="_blank">json</a> <b>100%</b><br />
 USA_Munzee10, <b>updated</b>, 91, <a href="https://www.munzee.com/map/9yzg26h7d/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Munzee10.json" target="_blank">json</a> <b>100%</b><br />
 USA_SybergsShark, <b>updated</b>, 75, <a href="https://www.munzee.com/map/9yzg3hn9j/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SybergsShark.json" target="_blank">json</a> <b>100%</b><br />
+USA_ChuckECheesePizza, <b>updated</b>, 71, <a href="https://www.munzee.com/map/9yzss5rpx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChuckECheesePizza.json" target="_blank">json</a> <b>100%</b><br />
