--- a/feladat.html
+++ b/feladat.html
@@ -966,3 +966,4 @@ USA_ChuckECheesePizza, <b>updated</b>, 71, <a href="https://www.munzee.com/map/9
 USA_9Mile, <b>updated</b>, 129, <a href="https://www.munzee.com/map/9yzg2dt8r/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_9Mile.json" target="_blank">json</a> <b>100%</b><br />
 USA_MothersDayFlowerPot, <b>updated</b>, 74, <a href="https://www.munzee.com/map/9yzsetr9v/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MothersDayFlowerPot.json" target="_blank">json</a> <b>100%</b><br />
 USA_TurtlePark, <b>updated</b>, 65, <a href="https://www.munzee.com/map/9yzgc2dz5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TurtlePark.json" target="_blank">json</a> <b>100%</b><br />
+USA_StacyParkFlower, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzezpc7r/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StacyParkFlower.json" target="_blank">json</a> <b>100%</b><br />
