--- a/feladat.html
+++ b/feladat.html
@@ -974,3 +974,4 @@ USA_TattooedDog, <b>updated</b>, 95, <a href="https://www.munzee.com/map/9yzku2p
 USA_TiemeyerPatch, <b>updated</b>, 94, <a href="https://www.munzee.com/map/9yzsr0eyr/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TiemeyerPatch.json" target="_blank">json</a> <b>100%</b><br />
 USA_CincoDeMayoTaco, <b>updated</b>, 69, <a href="https://www.munzee.com/map/9yzku1q8s/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CincoDeMayoTaco.json" target="_blank">json</a> <b>100%</b><br />
 USA_OverlandCar, <b>updated</b>, 104, <a href="https://www.munzee.com/map/9yzspfdcb/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OverlandCar.json" target="_blank">json</a> <b>100%</b><br />
+USA_FriscoTrain, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9yzerz82b/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FriscoTrain.json" target="_blank">json</a> <b>100%</b><br />
