--- a/feladat.html
+++ b/feladat.html
@@ -976,3 +976,4 @@ USA_CincoDeMayoTaco, <b>updated</b>, 69, <a href="https://www.munzee.com/map/9yz
 USA_OverlandCar, <b>updated</b>, 104, <a href="https://www.munzee.com/map/9yzspfdcb/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OverlandCar.json" target="_blank">json</a> <b>100%</b><br />
 USA_FriscoTrain, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9yzerz82b/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FriscoTrain.json" target="_blank">json</a> <b>100%</b><br />
 USA_StLouisAirplane, <b>updated</b>, 130, <a href="https://www.munzee.com/map/9yzsrkdby/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisAirplane.json" target="_blank">json</a> <b>100%</b><br />
+USA_PiDayPie, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzssh333/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiDayPie.json" target="_blank">json</a> <b>100%</b><br />
