--- a/feladat.html
+++ b/feladat.html
@@ -977,3 +977,4 @@ USA_OverlandCar, <b>updated</b>, 104, <a href="https://www.munzee.com/map/9yzspf
 USA_FriscoTrain, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9yzerz82b/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FriscoTrain.json" target="_blank">json</a> <b>100%</b><br />
 USA_StLouisAirplane, <b>updated</b>, 130, <a href="https://www.munzee.com/map/9yzsrkdby/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisAirplane.json" target="_blank">json</a> <b>100%</b><br />
 USA_PiDayPie, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzssh333/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiDayPie.json" target="_blank">json</a> <b>100%</b><br />
+USA_AfftonHorse, <b>updated</b>, 90, <a href="https://www.munzee.com/map/9yzg21rxs/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AfftonHorse.json" target="_blank">json</a> <b>100%</b><br />
