--- a/feladat.html
+++ b/feladat.html
@@ -979,3 +979,4 @@ USA_StLouisAirplane, <b>updated</b>, 130, <a href="https://www.munzee.com/map/9y
 USA_PiDayPie, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzssh333/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiDayPie.json" target="_blank">json</a> <b>100%</b><br />
 USA_AfftonHorse, <b>updated</b>, 90, <a href="https://www.munzee.com/map/9yzg21rxs/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AfftonHorse.json" target="_blank">json</a> <b>100%</b><br />
 USA_KirkwoodAnchor, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yzerj220/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodAnchor.json" target="_blank">json</a> <b>100%</b><br />
+USA_WalpelhorstHorse, <b>updated</b>, 91, <a href="https://www.munzee.com/map/9yzse9910/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WalpelhorstHorse.json" target="_blank">json</a> <b>100%</b><br />
