--- a/feladat.html
+++ b/feladat.html
@@ -982,3 +982,4 @@ USA_KirkwoodAnchor, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yz
 USA_WalpelhorstHorse, <b>updated</b>, 91, <a href="https://www.munzee.com/map/9yzse9910/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WalpelhorstHorse.json" target="_blank">json</a> <b>100%</b><br />
 USA_StCharlesAnchor, <b>updated</b>, 106, <a href="https://www.munzee.com/map/9yzsss1ws/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StCharlesAnchor.json" target="_blank">json</a> <b>100%</b><br />
 USA_Birdhouse, <b>updated</b>, 209, <a href="https://www.munzee.com/map/9yzdzxgvz/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Birdhouse.json" target="_blank">json</a> <b>100%</b><br />
+USA_Cardinals, <b>updated</b>, 85, <a href="https://www.munzee.com/map/9yzgewdcn/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cardinals.json" target="_blank">json</a> <b>100%</b><br />
