--- a/feladat.html
+++ b/feladat.html
@@ -990,3 +990,22 @@ USA_Friendship, <b>updated</b>, 903, <a href="https://www.munzee.com/map/9yzku9n
 USA_HappyKrautMemorial, <b>updated</b>, 237, <a href="https://www.munzee.com/map/9yzs3t7ge/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HappyKrautMemorial.json" target="_blank">json</a> <b>100%</b><br />
 USA_OFallonSoccer, <b>updated</b>, 201, <a href="https://www.munzee.com/map/9yzs2hm65/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OFallonSoccer.json" target="_blank">json</a> <b>100%</b><br />
 USA_PirateCouchPotatoPatch, <b>updated</b>, 88, <a href="https://www.munzee.com/map/9yzg871rx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PirateCouchPotatoPatch.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+USA_ChristmasInWebsterGroves, <b>updated</b>, <a href="https://www.munzee.com/map/9yzg82gvn/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChristmasInWebsterGroves.json" target="_blank">json</a><br />
+USA_KirkwoodVsWebsterGroves, <b>updated</b>, <a href="https://www.munzee.com/map/9yzermbkx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodVsWebsterGroves.json" target="_blank">json</a><br />
+USA_StLouisChristmasStocking, <b>updated</b>, <a href="https://www.munzee.com/map/9yzs9zjbq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisChristmasStocking.json" target="_blank">json</a><br />
+----városok<br />
+UnitedKingdom_city_Bournemouth, <b>updated</b>, <a href="https://www.munzee.com/map/gcn8sbhwp/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Bournemouth.json" target="_blank">json</a><br />
+USA_city_Concord, <b>updated</b>, <a href="https://www.munzee.com/map/9yzep995f/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Concord.json" target="_blank">json</a><br />
+USA_city_Kirkwood, <b>updated</b>, <a href="https://www.munzee.com/map/9yzeqxeqn/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Kirkwood.json" target="_blank">json</a><br />
+USA_city_OFallon, <b>updated</b>, <a href="https://www.munzee.com/map/9yzs8td5m/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_OFallon.json" target="_blank">json</a><br />
+USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
+USA_city_SaintLouis, <b>updated</b>, <a href="https://www.munzee.com/map/9yzgd9yne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintLouis.json" target="_blank">json</a><br />
+USA_city_SaintPeters, <b>updated</b>, <a href="https://www.munzee.com/map/9yzsdnv17/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintPeters.json" target="_blank">json</a><br />
+----felhasználók<br />
+BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
+BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
+----témák<br />
+USA_topic_TreeInSeasons, <b>updated</b>, <a href="https://www.munzee.com/map/9yzse63z5/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_TreeInSeasons.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.03.01 10:55:51<br />
+összesen 11662<br />
