--- a/feladat.html
+++ b/feladat.html
@@ -559,3 +559,302 @@ USA_NoelridgeMystery kihagyva (100%), <br />
 USA_WestDesMoinesStrawberry, not updated, 0.0<br />
 USA_WestDesMoinesShark, not updated, 0.0<br />
 USA_AltoonaEvos, <b>updated</b>, 99, <a href="https://www.munzee.com/map/9zmsbkdmd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AltoonaEvos.json" target="_blank">json</a><br />
+USA_DSMHalloweenWitch, not updated, 0.0<br />
+USA_CRFrankenstein, not updated, 0.9099999999999966<br />
+USA_ThomasParkFlats kihagyva (100%), <br />
+USA_IowaGoldfinch kihagyva (100%), <br />
+USA_Minion kihagyva (100%), <br />
+USA_FarmingtonTiger, not updated, 0.0<br />
+USA_CedarRapidsPumpkin kihagyva (100%), <br />
+USA_PuppyPlayPen, not updated, 0.0<br />
+USA_Burger kihagyva (100%), <br />
+USA_Pizza kihagyva (100%), <br />
+USA_StormtrooperSavage kihagyva (100%), <br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+Denmark_AnimalFarmHilleroed, not updated, 0.0<br />
+Denmark_EvolutionparkInRoskilde, not updated, 1.0<br />
+Denmark_ChristmastreeInHilleroed kihagyva (100%), <br />
+Denmark_Drikkehorn kihagyva (100%), <br />
+Denmark_FCMidtjylland, not updated, 0.28000000000000114<br />
+Denmark_RandersRegnskov, not updated, 0.4000000000000057<br />
+Denmark_RandersSnowy, not updated, 0.0<br />
+Denmark_SonicRanders, not updated, 0.0<br />
+Denmark_FlatHammel kihagyva (100%), <br />
+Denmark_GrenaaAmethyst kihagyva (100%), <br />
+Denmark_GrenaaBigAmethyst kihagyva (100%), <br />
+Denmark_GrenaaFerry kihagyva (100%), <br />
+Denmark_GrenaaSapphireAndAmethyst kihagyva (100%), <br />
+Denmark_HeartOfValentine kihagyva (100%), <br />
+Denmark_Evolution2019Hammel, not updated, 0.0<br />
+Denmark_NextStopTilst kihagyva (100%), <br />
+Denmark_SilkeborgMario kihagyva (100%), <br />
+Denmark_TranbjergButterfly kihagyva (100%), <br />
+Denmark_TrueForestFish kihagyva (100%), <br />
+Denmark_TrueForestSurprise kihagyva (100%), <br />
+Denmark_AppleInAarhus kihagyva (100%), <br />
+Denmark_GardenOfJewels kihagyva (100%), <br />
+Denmark_OnyxCitrineParkInHammel kihagyva (100%), <br />
+Denmark_SilkeborgCoatOfArms kihagyva (100%), <br />
+Denmark_SilkeborgRainbowUnicorn kihagyva (100%), <br />
+Denmark_SilkeborgHexagon kihagyva (100%), <br />
+Denmark_SilkeborgOwl kihagyva (100%), <br />
+Denmark_SilkeborgNightOwl kihagyva (100%), <br />
+Denmark_GrenaaHeart2022 kihagyva (100%), <br />
+UnitedKingdom_PegasusLure, not updated, 0.0<br />
+USA_ValentineHeartCapeCanaveral kihagyva (100%), <br />
+UnitedKingdom_RIPQueenElizabethIICrown kihagyva (100%), <br />
+UnitedKingdom_ChallockChimp, not updated, 0.0<br />
+UnitedKingdom_LittleBurtonApple, not updated, 0.5<br />
+UnitedKingdom_AshfordKentClanWars, not updated, 0.6024096385542208<br />
+UnitedKingdom_AshfordVariety kihagyva (100%), <br />
+UnitedKingdom_ShoeburyVirtuals, not updated, 0.0<br />
+UnitedKingdom_SCGVirtualField, not updated, 0.0<br />
+UnitedKingdom_KentQueensCrown kihagyva (100%), <br />
+UnitedKingdom_EvoPlusGarden kihagyva (100%), <br />
+UnitedKingdom_Nipper kihagyva (100%), <br />
+UnitedKingdom_HayesRainbow kihagyva (100%), <br />
+UnitedKingdom_UnionJack kihagyva (100%), <br />
+UnitedKingdom_SunnyRainbow kihagyva (100%), <br />
+UnitedKingdom_MaattmoosMoo kihagyva (100%), <br />
+UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
+UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
+UnitedKingdom_RainbowHeart kihagyva (100%), <br />
+UnitedKingdom_CanterburyVictoriaPark kihagyva (100%), <br />
+UnitedKingdom_MrKnowItOwl, not updated, 0.0<br />
+UnitedKingdom_ChristmasGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_InMemoryOfPam kihagyva (100%), <br />
+UnitedKingdom_LittleLotties1st, not updated, 0.0<br />
+UnitedKingdom_SuperpeggysVirtual, not updated, 0.0<br />
+UnitedKingdom_HelpForHingham, not updated, 0.0<br />
+UnitedKingdom_NotRudolph, not updated, 0.0<br />
+UnitedKingdom_MadHatter, not updated, 0.0<br />
+UnitedKingdom_NVG kihagyva (100%), <br />
+UnitedKingdom_EveryColour kihagyva (100%), <br />
+UnitedKingdom_NaomisSloth kihagyva (100%), <br />
+UnitedKingdom_VirtualJewels, not updated, 0.0<br />
+UnitedKingdom_WorsteadForNorkie kihagyva (100%), <br />
+UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
+UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
+UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
+UnitedKingdom_SheringhamJewelSquare, not updated, 0.0<br />
+UnitedKingdom_IceCreamCone, not updated, 0.0<br />
+UnitedKingdom_VirtualLove, not updated, 0.0<br />
+UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
+UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
+UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
+UnitedKingdom_HMSVictory, not updated, 0.0<br />
+UnitedKingdom_RetroBunzee kihagyva (100%), <br />
+UnitedKingdom_DenverWindmill kihagyva (100%), <br />
+Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
+Australia_GattonArrowsArrow1 kihagyva (100%), <br />
+Australia_GattonArrowsArrow2, not updated, 0.0<br />
+Australia_GattonArrowsArrow3, not updated, 0.0<br />
+Australia_GattonArrowsArrow4, not updated, 0.0<br />
+Australia_GattonArrowsArrow5, not updated, 0.0<br />
+Australia_BeeJewelled kihagyva (100%), <br />
+Australia_SoonBeeSpring kihagyva (100%), <br />
+Australia_WeBeePawns kihagyva (100%), <br />
+Australia_BeeFlats kihagyva (100%), <br />
+Australia_BeeQueen kihagyva (100%), <br />
+Australia_BeeTree kihagyva (100%), <br />
+Australia_BeeLucky kihagyva (100%), <br />
+Australia_HereBeeZodiacs kihagyva (100%), <br />
+Australia_FlatterBee kihagyva (100%), <br />
+Australia_Honeycomb kihagyva (100%), <br />
+Australia_TwoBeeOrKnot, not updated, -0.6329113924050631<br />
+Australia_HoneyDipper kihagyva (100%), <br />
+Australia_LaidleyBees kihagyva (100%), <br />
+Australia_RUMbleBee kihagyva (100%), <br />
+Australia_FlatsFlyAKite kihagyva (100%), <br />
+Australia_SouthernCrossKite kihagyva (100%), <br />
+Australia_ToowoombaRose, not updated, 0.0<br />
+Australia_SnowBeeMelting kihagyva (100%), <br />
+USA_CelticSnake, not updated, 0.0<br />
+Australia_AE2Submarine kihagyva (100%), <br />
+Australia_AussiePossum kihagyva (100%), <br />
+USA_ArizonaCactus kihagyva (100%), <br />
+UnitedKingdom_BournemouthBeachHuts kihagyva (100%), <br />
+Australia_CarsBoysFirstCar kihagyva (100%), <br />
+Australia_CasinoLuckyStar kihagyva (100%), <br />
+UnitedKingdom_CazmosCelebrationGarden kihagyva (100%), <br />
+Australia_CrocOfMunzees kihagyva (100%), <br />
+UnitedKingdom_CuppaCazmo kihagyva (100%), <br />
+Australia_DroughtAngel kihagyva (100%), <br />
+Australia_EmuInCanberra kihagyva (100%), <br />
+UnitedKingdom_FlatFlying kihagyva (100%), <br />
+UnitedKingdom_FlatSledding kihagyva (100%), <br />
+Australia_GoldCoastGhost kihagyva (100%), <br />
+UnitedKingdom_Greenman kihagyva (100%), <br />
+Australia_HauntedHouse kihagyva (100%), <br />
+USA_HorsingAroundAggieland kihagyva (100%), <br />
+USA_Julbock kihagyva (100%), <br />
+USA_ReindeerInKentucky kihagyva (100%), <br />
+Australia_LismorePie kihagyva (100%), <br />
+USA_LostGoldenJellyfish kihagyva (100%), <br />
+UnitedKingdom_LostJellyfishInBournemouth kihagyva (100%), <br />
+USA_LostPBJellyfishInRogers kihagyva (100%), <br />
+UnitedKingdom_LostTurtleInFerndown kihagyva (100%), <br />
+Australia_MawsonLakesDHSTape kihagyva (100%), <br />
+UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
+UnitedKingdom_Pompey kihagyva (100%), <br />
+UnitedKingdom_QueensBaton kihagyva (100%), <br />
+USA_RockingHorseInOhio kihagyva (100%), <br />
+Australia_RooInCanberra kihagyva (100%), <br />
+Australia_SAPartyHat kihagyva (100%), <br />
+Australia_Time2MunzeeLilydale kihagyva (100%), <br />
+Australia_TrojanKitty kihagyva (100%), <br />
+Australia_Tulips kihagyva (100%), <br />
+UnitedKingdom_WinterSolstice kihagyva (100%), <br />
+Australia_MalenyTrees, not updated, 0.0<br />
+USA_MunzeeX kihagyva (100%), <br />
+USA_MunzeesXBirthday kihagyva (100%), <br />
+USA_BobbyTheZombie kihagyva (100%), <br />
+USA_EasterMunzeePin, not updated, 0.0<br />
+Germany_10thBirthdayBerlin, not updated, 0.0<br />
+UnitedKingdom_MiniPortal3 kihagyva (100%), <br />
+USA_MiniPortal4 kihagyva (100%), <br />
+USA_NoblesvilleTaco, not updated, 0.0<br />
+Canada_FabulousFebruaryFeteHeart, not updated, 0.0<br />
+Canada_FabulousFebruaryFeteFlat, not updated, 0.0<br />
+Canada_MadMarchPi kihagyva (100%), <br />
+USA_2ndAnnualCuriosiTeaParty2 kihagyva (100%), <br />
+USA_JunkArt, not updated, 0.0<br />
+USA_FolkstonTomahawk kihagyva (100%), <br />
+Portugal_ShipCanical kihagyva (100%), <br />
+Australia_TourDownUnder, not updated, 0.0<br />
+UnitedKingdom_BathBoat, not updated, 0.0<br />
+USA_GCardinalFlat kihagyva (100%), <br />
+Canada_WarblersSquare kihagyva (100%), <br />
+Portugal_Saab9xInMadeira, <b>hiba (megváltozott a <a href="https://docs.google.com/spreadsheets/d/1N69Rgkm7tXFiOLBV40m2XHMM-UeJpQEEE_ozCPc2qyw" target="_blank">táblázat</a> felépítése?)</b><br />
+Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
+USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
+USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
+UnitedKingdom_ISpyASpyInStockport, not updated, 0.5799999999999983<br />
+USA_SpyTrain kihagyva (100%), <br />
+USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
+USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
+Canada_Feb2023HeartGarden, not updated, 0.0<br />
+USA_SpyGlass kihagyva (100%), <br />
+USA_TiedUpInKnotzInRoundRock, not updated, 0.0<br />
+USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.8999999999999915<br />
+USA_EllisCreekOwl kihagyva (100%), <br />
+USA_EllisCreekOwlFlats, not updated, 0.0<br />
+USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
+USA_GardenGirl kihagyva (100%), <br />
+USA_TexasGoldenTicket kihagyva (100%), <br />
+USA_TexasGoldenTicketFlats, not updated, 0.0<br />
+USA_MarshallMallard kihagyva (100%), <br />
+USA_UncutDiamond kihagyva (100%), <br />
+USA_UncutDiamondFlats kihagyva (100%), <br />
+USA_BabyGroot kihagyva (100%), <br />
+USA_WeatherfordXmasOwl kihagyva (100%), <br />
+USA_AvocatoAvocato kihagyva (100%), <br />
+USA_AvocatoToy, not updated, 0.0<br />
+USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
+USA_BundtiniTrail kihagyva (100%), <br />
+USA_JewelOfAHeart kihagyva (100%), <br />
+USA_LetsTalkAbundtLove kihagyva (100%), <br />
+USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
+USA_Cowtown kihagyva (100%), <br />
+USA_VelmaCrossbow, not updated, 0.0<br />
+USA_Shaggy, not updated, 0.0<br />
+USA_MysteryMachine, not updated, 0.0<br />
+USA_FortWorthFighterJet, not updated, 0.0<br />
+USA_TCUHornedFrogs, not updated, 0.0<br />
+USA_GeowoodstockXVIITexas, not updated, 0.0<br />
+USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
+USA_TigerKing, not updated, 0.4900000000000091<br />
+USA_TexasGeowoodstock2019 kihagyva (100%), <br />
+USA_FortWorthSucculents kihagyva (100%), <br />
+USA_RobVsMatt, not updated, 0.0<br />
+USA_BrightColoredHorse, not updated, 0.0<br />
+USA_BrightColoredHorseFlats, not updated, 0.0<br />
+USA_RuhRohRAGGY, not updated, 0.0<br />
+USA_PrizeWheel kihagyva (100%), <br />
+USA_EvoHedgehog kihagyva (100%), <br />
+USA_SeahorseByTheSeaShore kihagyva (100%), <br />
+USA_LakeForestMixture, not updated, 0.4700000000000024<br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+USA_GreenvilleOhioSpiritTrophy, not updated, 1.0<br />
+USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
+USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
+USA_GreenvilleZodiacWheels kihagyva (100%), <br />
+USA_GreenvilleRUMCircle, not updated, 0.0<br />
+USA_GreenvilleFlatSurprise, not updated, 0.0<br />
+USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
+USA_GreenvilleSouthCarolina, not updated, 0.0<br />
+USA_JaysvilleFlatCircles, not updated, 0.0<br />
+USA_CCTXZeeCret kihagyva (100%), <br />
+USA_DecaturHearts kihagyva (100%), <br />
+USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
+UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
+UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
+USA_ScoobyDooCrossbow, not updated, 0.0<br />
+USA_TexasStateFlag kihagyva (100%), <br />
+USA_Geowoodstock2019 kihagyva (100%), <br />
+USA_MansfieldMuru, not updated, 0.0<br />
+USA_CedarRapidsIAFlag, not updated, 0.0<br />
+Hungary_JewelAndColor kihagyva (100%), <br />
+USA_CRMunzee6thBirthday kihagyva (100%), <br />
+USA_CRAirMysteryTrail kihagyva (100%), <br />
+USA_CRMunzFit20 kihagyva (100%), <br />
+USA_HayesBattlefield kihagyva (100%), <br />
+USA_CREgyptianZodiac kihagyva (100%), <br />
+USA_CherryBombCedarRapids kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
+USA_GCandyCane kihagyva (100%), <br />
+USA_GCandyCaneFlats, not updated, 0.9000000000000057<br />
+USA_GShamrock kihagyva (100%), <br />
+USA_GShamrockFlats, not updated, 0.3500000000000014<br />
+USA_GPumpkin kihagyva (100%), <br />
+USA_GPumpkinFlats, not updated, 0.0<br />
+USA_Mauhaus kihagyva (100%), <br />
+USA_GToyotaCrossbows, not updated, 0.0<br />
+USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
+USA_GToyota kihagyva (100%), <br />
+USA_GToyotaFlats, not updated, 0.9699999999999989<br />
+USA_GJewelBelt, not updated, 0.20999999999999375<br />
+USA_GEvoBelt, not updated, 0.3400000000000034<br />
+USA_GBypassMixed kihagyva (100%), <br />
+USA_G62WestEvo, not updated, 0.33000000000000007<br />
+USA_NoelridgeMysteryFlats kihagyva (100%), <br />
+USA_GSouthland, not updated, 0.1999999999999993<br />
+USA_GMorning, not updated, 0.39000000000000057<br />
+USA_GCHampionWay, not updated, 0.0<br />
+USA_GGamingTable, not updated, 0.3200000000000003<br />
+USA_PotOfGold, not updated, 0.0<br />
+USA_WitchsHat, not updated, 0.0<br />
+USA_OwensboroRiverboat, not updated, 0.10999999999999943<br />
+USA_OwensboroRiverboatFlats, not updated, 0.7199999999999998<br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
+Netherlands_RobAndLouise kihagyva (100%), <br />
+USA_TaylorSwiftTheEras, not updated, 0.0<br />
+USA_GreenSpyFrog kihagyva (100%), <br />
+USA_PotOZees, <b>updated</b>, 373, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a> <b>100%</b><br />
